--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -6,4 +6,6 @@ djangorestframework-simplejwt == 4.7.2
 django-filter == 2.4.0
 gunicorn == 20.0.4
 plotly == 4.14.3
-psycopg2-binary ==2.8.6
+psycopg2-binary == 2.8.6
+pillow == 8.3.1
+requests == 2.26.0
