--- a/.gitignore
+++ b/.gitignore
@@ -131,6 +131,6 @@ dmypy.json
 .vscode/
 
 https/ssl_certs/
-.conf.erb
-.ssl.conf.erb
-docker-compose.yml
+#.conf.erb
+#.ssl.conf.erb
+#docker-compose.yml
