--- a/.gitignore
+++ b/.gitignore
@@ -131,11 +131,6 @@ dmypy.json
 .vscode/
 
 https/ssl_certs/
-<<<<<<< HEAD
-#.conf.erb
-#.ssl.conf.erb
-#docker-compose.yml
-=======
 .conf.erb
 .ssl.conf.erb
->>>>>>> def25fd97447de12832996abc177a3138cb443c3
+docker-compose.yml
