--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       dockerfile: Dockerfile
     command: gunicorn iotproject.wsgi:application --bind 0.0.0.0:8000 --workers=2
     working_dir: /usr/src/app/
+    #restart: always
     volumes:
       - ./app:/usr/src/app
       - static_volume:/usr/src/app/staticfiles
@@ -24,6 +25,7 @@ services:
   
   db:
     image: postgres:12.0-alpine
+    #restart: always
     volumes:
       - db_data:/var/lib/postgresql/data/
     env_file:
@@ -35,6 +37,7 @@ services:
     build:
       context: ./nginx
       dockerfile: Dockerfile
+    #restart: always
     volumes:
       - static_volume:/usr/src/app/staticfiles
       - media_volume:/usr/src/app/mediafiles
@@ -62,6 +65,7 @@ services:
       - front
     depends_on:
       - nginx
+    #restart: always
     volumes:
       - ./https/192.168.10.117.conf.erb:/var/lib/nginx-conf/192.168.10.117.conf.erb:ro
       - ./https/192.168.10.117.ssl.conf.erb:/var/lib/nginx-conf/192.168.10.117.ssl.conf.erb:ro
