--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
   app:
     build:
       context: ./app
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile_raspi
     command: gunicorn iotproject.wsgi:application --bind 0.0.0.0:8000 --workers=2
     working_dir: /usr/src/app/
     #restart: always
